--- a/2일차_SQL_실습.ipynb
+++ b/2일차_SQL_실습.ipynb
@@ -46,13 +46,48 @@
       "cell_type": "code",
       "source": [
         "!pip install ipython-sql==0.4.1\n",
-        "!pip install SQLAlchemy==1.4.49"
+        "!pip install SQLAlchemy==1.4.49\n",
+        "!pip install psycopg2"
       ],
       "metadata": {
-        "id": "z_LpiXYTPLJ3"
+        "id": "z_LpiXYTPLJ3",
+        "outputId": "fa746b2e-3775-4559-c50e-ae6defaf3fc8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: ipython-sql==0.4.1 in /usr/local/lib/python3.11/dist-packages (0.4.1)\n",
+            "Requirement already satisfied: prettytable<1 in /usr/local/lib/python3.11/dist-packages (from ipython-sql==0.4.1) (0.7.2)\n",
+            "Requirement already satisfied: ipython>=1.0 in /usr/local/lib/python3.11/dist-packages (from ipython-sql==0.4.1) (7.34.0)\n",
+            "Requirement already satisfied: sqlalchemy>=0.6.7 in /usr/local/lib/python3.11/dist-packages (from ipython-sql==0.4.1) (1.4.49)\n",
+            "Requirement already satisfied: sqlparse in /usr/local/lib/python3.11/dist-packages (from ipython-sql==0.4.1) (0.5.3)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.11/dist-packages (from ipython-sql==0.4.1) (1.17.0)\n",
+            "Requirement already satisfied: ipython-genutils>=0.1.0 in /usr/local/lib/python3.11/dist-packages (from ipython-sql==0.4.1) (0.2.0)\n",
+            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (75.2.0)\n",
+            "Requirement already satisfied: jedi>=0.16 in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (0.19.2)\n",
+            "Requirement already satisfied: decorator in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (5.2.1)\n",
+            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (0.7.5)\n",
+            "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (5.7.1)\n",
+            "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (3.0.51)\n",
+            "Requirement already satisfied: pygments in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (2.19.1)\n",
+            "Requirement already satisfied: backcall in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (0.2.0)\n",
+            "Requirement already satisfied: matplotlib-inline in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (0.1.7)\n",
+            "Requirement already satisfied: pexpect>4.3 in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (4.9.0)\n",
+            "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.11/dist-packages (from sqlalchemy>=0.6.7->ipython-sql==0.4.1) (3.2.1)\n",
+            "Requirement already satisfied: parso<0.9.0,>=0.8.4 in /usr/local/lib/python3.11/dist-packages (from jedi>=0.16->ipython>=1.0->ipython-sql==0.4.1) (0.8.4)\n",
+            "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.11/dist-packages (from pexpect>4.3->ipython>=1.0->ipython-sql==0.4.1) (0.7.0)\n",
+            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.11/dist-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=1.0->ipython-sql==0.4.1) (0.2.13)\n",
+            "Requirement already satisfied: SQLAlchemy==1.4.49 in /usr/local/lib/python3.11/dist-packages (1.4.49)\n",
+            "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.11/dist-packages (from SQLAlchemy==1.4.49) (3.2.1)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -62,7 +97,7 @@
       "source": [
         "%load_ext sql"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -73,7 +108,7 @@
       "source": [
         "%sql postgresql://guest:Guest1234@learnde.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
