--- a/3일차_SQL_실습.ipynb
+++ b/3일차_SQL_실습.ipynb
@@ -4,12 +4,14 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "gpuType": "V28",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "TPU"
   },
   "cells": [
     {
@@ -35,14 +37,15 @@
       "cell_type": "code",
       "source": [
         "!pip install ipython-sql==0.4.1\n",
-        "!pip install SQLAlchemy==1.4.49"
+        "!pip install SQLAlchemy==1.4.49\n",
+        "!pip install psycopg2"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TKrE3Qa9LUNY",
-        "outputId": "0ce27bb4-d03f-4fdb-a97d-27f1b530ca29"
+        "outputId": "efeb1f95-40fb-4abe-d5df-02e40a477f46"
       },
       "execution_count": 1,
       "outputs": [
@@ -59,11 +62,11 @@
             "Requirement already satisfied: ipython-genutils>=0.1.0 in /usr/local/lib/python3.11/dist-packages (from ipython-sql==0.4.1) (0.2.0)\n",
             "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (75.2.0)\n",
             "Requirement already satisfied: jedi>=0.16 in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (0.19.2)\n",
-            "Requirement already satisfied: decorator in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (4.4.2)\n",
+            "Requirement already satisfied: decorator in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (5.2.1)\n",
             "Requirement already satisfied: pickleshare in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (0.7.5)\n",
             "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (5.7.1)\n",
             "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (3.0.51)\n",
-            "Requirement already satisfied: pygments in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (2.18.0)\n",
+            "Requirement already satisfied: pygments in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (2.19.1)\n",
             "Requirement already satisfied: backcall in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (0.2.0)\n",
             "Requirement already satisfied: matplotlib-inline in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (0.1.7)\n",
             "Requirement already satisfied: pexpect>4.3 in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (4.9.0)\n",
@@ -72,7 +75,8 @@
             "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.11/dist-packages (from pexpect>4.3->ipython>=1.0->ipython-sql==0.4.1) (0.7.0)\n",
             "Requirement already satisfied: wcwidth in /usr/local/lib/python3.11/dist-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=1.0->ipython-sql==0.4.1) (0.2.13)\n",
             "Requirement already satisfied: SQLAlchemy==1.4.49 in /usr/local/lib/python3.11/dist-packages (1.4.49)\n",
-            "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.11/dist-packages (from SQLAlchemy==1.4.49) (3.2.1)\n"
+            "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.11/dist-packages (from SQLAlchemy==1.4.49) (3.2.1)\n",
+            "Requirement already satisfied: psycopg2 in /usr/local/lib/python3.11/dist-packages (2.9.10)\n"
           ]
         }
       ]
@@ -124,7 +128,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 221
         },
-        "outputId": "7172366e-833f-4b35-8f3b-a27566e3ef31"
+        "outputId": "6e5e4eec-d684-446c-83c2-a0e97b9a6322"
       },
       "source": [
         "%%sql\n",
@@ -217,7 +221,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 200
         },
-        "outputId": "c034f215-01b2-4135-c3d6-d318b8fb6f70"
+        "outputId": "ddb954ca-5d9d-42f8-f7b4-888e7eee4e84"
       },
       "source": [
         "%%sql\n",
@@ -304,7 +308,7 @@
           "height": 200
         },
         "id": "snaFvWlEwBdX",
-        "outputId": "268a46ae-0c10-4b22-e928-12312a690ce0"
+        "outputId": "0fd5361c-894c-4863-fcc1-d854488c1ea9"
       },
       "source": [
         "%%sql\n",
@@ -400,7 +404,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 95
         },
-        "outputId": "ffb4275e-00b0-45ba-b510-fe1c6865ce4e"
+        "outputId": "a1fc3c2d-e4a6-4f98-e836-0f1ffc5842b3"
       },
       "source": [
         "%%sql\n",
@@ -464,7 +468,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 221
         },
-        "outputId": "04484834-cadb-48e4-93b2-0ac1d8c5c071"
+        "outputId": "d2687924-0552-4181-fd89-1fddd4f7f7c2"
       },
       "source": [
         "%%sql\n",
@@ -549,7 +553,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 221
         },
-        "outputId": "e1ee0a31-a160-4a7b-8ea7-f7623a264dee"
+        "outputId": "e4b7a1cf-efcc-4ecc-ef3e-a2b73056cb4e"
       },
       "source": [
         "%%sql\n",
@@ -652,7 +656,7 @@
           "height": 956
         },
         "id": "FDHI4G9jLexW",
-        "outputId": "e20546bc-5b11-46b3-bbf4-a81e38258641"
+        "outputId": "cd5b9c7c-f7b4-40d6-e63a-40855d0a767d"
       },
       "source": [
         "%%sql\n",
@@ -976,7 +980,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "smQwzO780ZuO",
-        "outputId": "53537d90-5953-45d9-ab72-d454268d9fc9"
+        "outputId": "3c8d8a71-5c23-4d9f-e243-f04ad5166513"
       },
       "source": [
         "%%sql\n",
@@ -1017,7 +1021,7 @@
           "height": 221
         },
         "id": "h5MkzbIA0eTv",
-        "outputId": "ff291f07-eeb6-4bd2-ef85-4e57e549d076"
+        "outputId": "92d311be-65f6-44cd-96fa-591fe74f6995"
       },
       "source": [
         "%%sql\n",
@@ -1110,7 +1114,7 @@
           "height": 95
         },
         "id": "yg2qVZFb4J5u",
-        "outputId": "b9b4349a-4840-4490-fa65-5cabf9a939f4"
+        "outputId": "0b30d960-3c81-4a6f-cbd1-84f819adfebc"
       },
       "source": [
         "%%sql\n",
@@ -1157,7 +1161,7 @@
           "height": 95
         },
         "id": "FFT_X9HM55Rm",
-        "outputId": "27cce389-c9f7-480f-a674-bcefaea62e29"
+        "outputId": "eb589272-b15a-47fd-c8be-a40648532b66"
       },
       "source": [
         "%%sql\n",
@@ -1203,7 +1207,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "KVD1XVgU6IaA",
-        "outputId": "9b85739d-9bdc-4ae0-f767-e0ec2103be64",
+        "outputId": "f983c930-369d-4aac-f978-843e6c6cd963",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 95
@@ -1267,7 +1271,7 @@
           "height": 95
         },
         "id": "xN1I5V_j4TVL",
-        "outputId": "e86b1477-a97b-4af3-e3f2-a1d8dcc9752e"
+        "outputId": "bfbf6a91-b0f2-4134-d1a1-5195b2da26d1"
       },
       "source": [
         "%%sql\n",
@@ -1326,7 +1330,7 @@
           "height": 95
         },
         "id": "wXvhAnqO4Wt6",
-        "outputId": "580784dc-01f4-4026-c19d-e8aeb375a082"
+        "outputId": "5896c5ce-d3e9-4ef5-bcfe-953bd6ac2eaf"
       },
       "source": [
         "%%sql\n",
@@ -1388,7 +1392,7 @@
           "height": 95
         },
         "id": "qZD14dYQ4mv0",
-        "outputId": "ce3c055b-91d0-429d-fd5c-31b9bdf00a7c"
+        "outputId": "bb953fe9-4b7a-4941-f09a-8f3fecc05d1f"
       },
       "source": [
         "%%sql\n",
