--- a/HW_4th.ipynb
+++ b/HW_4th.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZh9+ZSfG/jolYCWIy43Vr",
+      "gpuType": "V28",
+      "authorship_tag": "ABX9TyOhQnyKIpHpoqq2eaLrmidF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "TPU"
   },
   "cells": [
     {
@@ -28,11 +30,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "XNaAYClag6uc"
+        "id": "XNaAYClag6uc",
+        "outputId": "62940f5a-8d5d-45b5-ec9e-c77ec680039f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: ipython-sql==0.4.1 in /usr/local/lib/python3.11/dist-packages (0.4.1)\n",
+            "Requirement already satisfied: prettytable<1 in /usr/local/lib/python3.11/dist-packages (from ipython-sql==0.4.1) (0.7.2)\n",
+            "Requirement already satisfied: ipython>=1.0 in /usr/local/lib/python3.11/dist-packages (from ipython-sql==0.4.1) (7.34.0)\n",
+            "Requirement already satisfied: sqlalchemy>=0.6.7 in /usr/local/lib/python3.11/dist-packages (from ipython-sql==0.4.1) (1.4.49)\n",
+            "Requirement already satisfied: sqlparse in /usr/local/lib/python3.11/dist-packages (from ipython-sql==0.4.1) (0.5.3)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.11/dist-packages (from ipython-sql==0.4.1) (1.17.0)\n",
+            "Requirement already satisfied: ipython-genutils>=0.1.0 in /usr/local/lib/python3.11/dist-packages (from ipython-sql==0.4.1) (0.2.0)\n",
+            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (75.2.0)\n",
+            "Requirement already satisfied: jedi>=0.16 in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (0.19.2)\n",
+            "Requirement already satisfied: decorator in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (5.2.1)\n",
+            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (0.7.5)\n",
+            "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (5.7.1)\n",
+            "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (3.0.51)\n",
+            "Requirement already satisfied: pygments in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (2.19.1)\n",
+            "Requirement already satisfied: backcall in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (0.2.0)\n",
+            "Requirement already satisfied: matplotlib-inline in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (0.1.7)\n",
+            "Requirement already satisfied: pexpect>4.3 in /usr/local/lib/python3.11/dist-packages (from ipython>=1.0->ipython-sql==0.4.1) (4.9.0)\n",
+            "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.11/dist-packages (from sqlalchemy>=0.6.7->ipython-sql==0.4.1) (3.2.1)\n",
+            "Requirement already satisfied: parso<0.9.0,>=0.8.4 in /usr/local/lib/python3.11/dist-packages (from jedi>=0.16->ipython>=1.0->ipython-sql==0.4.1) (0.8.4)\n",
+            "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.11/dist-packages (from pexpect>4.3->ipython>=1.0->ipython-sql==0.4.1) (0.7.0)\n",
+            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.11/dist-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=1.0->ipython-sql==0.4.1) (0.2.13)\n",
+            "Requirement already satisfied: SQLAlchemy==1.4.49 in /usr/local/lib/python3.11/dist-packages (1.4.49)\n",
+            "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.11/dist-packages (from SQLAlchemy==1.4.49) (3.2.1)\n",
+            "Requirement already satisfied: psycopg2 in /usr/local/lib/python3.11/dist-packages (2.9.10)\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install ipython-sql==0.4.1\n",
         "!pip install SQLAlchemy==1.4.49\n",
@@ -47,7 +84,7 @@
       "metadata": {
         "id": "SX_5M86rg8_A"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -58,7 +95,7 @@
       "metadata": {
         "id": "L94RyP3bg9Bj"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -108,30 +145,19 @@
     {
       "cell_type": "code",
       "source": [
-        "# 1-2. First_value/Last_value\n",
-        "%%sql\n",
-        "\n",
-        "SELECT userid, FIRST_VALUE(channel) over(partition by userid order by ts\n",
-        "rows between unbounded preceding and unbounded following) as first_channel\n",
-        "FROM raw_data.user_session_channel usc join raw_data.session_timestamp st on usc.sessionid=st.sessionid\n"
-      ],
-      "metadata": {
-        "id": "Oaz36YoBL5HX"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 1-3. Group by\n",
+        "# 1-2. Row_number + Group by\n",
         "%%sql\n",
         "\n",
         "select userid,\n",
-        "  max(case when  then channel) as first_channel,\n",
-        "  max(case when  then channel) as last_channel, ts\n",
-        "from raw_data.user_session_channel usc join raw_data.session_timestamp st on usc.sessionid=st.sessionid\n",
-        "group by 1"
+        "  max(case when rn1=1 then channel end) as first_channel,\n",
+        "  max(case when rn2=1 then channel end) as last_channel\n",
+        "from (\n",
+        "  select userid, channel,\n",
+        "    row_number() over (partition by userid order by ts) as rn1,\n",
+        "    row_number() over (partition by userid order by ts desc) as rn2\n",
+        "  from raw_data.user_session_channel usc join raw_data.session_timestamp st on usc.sessionid=st.sessionid\n",
+        ")\n",
+        "group by 1;"
       ],
       "metadata": {
         "id": "5w94KQwYg9EH"
@@ -141,7 +167,45 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 1-3. First_value/Last_value\n",
+        "%%sql\n",
+        "\n",
+        "SELECT distinct userid,\n",
+        "  FIRST_VALUE(channel) over(partition by userid order by ts\n",
+        "    rows between unbounded preceding and unbounded following) as first_channel,\n",
+        "  LAST_VALUE(channel) over(partition by userid order by ts desc\n",
+        "    rows between unbounded preceding and unbounded following) as last_channel\n",
+        "FROM raw_data.user_session_channel usc join raw_data.session_timestamp st on usc.sessionid=st.sessionid"
+      ],
+      "metadata": {
+        "id": "Oaz36YoBL5HX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **NO. 2 |** Gross Revenue가 가장 큰 UserID 10개 찾기"
+      ],
+      "metadata": {
+        "id": "GBt1Xad0kvVF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2-1. group by\n",
+        "%%sql\n",
+        "\n",
+        "select userid, sum(amount)\n",
+        "from raw_data.user_session_channel usc\n",
+        "  join raw_data.session_transaction str on usc.sessionid=str.sessionid\n",
+        "group by 1\n",
+        "order by 2 desc\n",
+        "limit 10;"
+      ],
       "metadata": {
         "id": "3CAjqlsOg9Gb"
       },
@@ -150,7 +214,16 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 2-2. sum over\n",
+        "%%sql\n",
+        "\n",
+        "select userid, sum(amount) over (partition by userid)\n",
+        "from raw_data.user_session_channel usc\n",
+        "  join raw_data.session_transaction str on usc.sessionid=str.sessionid\n",
+        "order by 2 desc\n",
+        "limit 10;"
+      ],
       "metadata": {
         "id": "ctc2uzqEg9JJ"
       },
@@ -158,8 +231,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **NO. 3 |** raw_data.nps 테이블을 바탕으로 월별 NPS 계산"
+      ],
+      "metadata": {
+        "id": "2QWkj39Nofkd"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "%%sql\n",
+        "\n",
+        "select\n",
+        "from raw_data.nps"
+      ],
       "metadata": {
         "id": "vMh-t81Og9Lp"
       },
