--- a/7-1_Simple_ETL.ipynb
+++ b/7-1_Simple_ETL.ipynb
@@ -33,7 +33,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c61e660d-fd12-44dc-fabc-5d1f8d3f6a8f"
+        "outputId": "7b9f3154-d55a-4cfc-ad4b-aa467be19562"
       },
       "execution_count": 1,
       "outputs": [
@@ -113,13 +113,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c261a5d3-7135-45c3-d303-eb95bbe1e5ca"
+        "outputId": "5ff9e377-7c21-4781-a3fc-31549813b341"
       },
       "source": [
         "%%sql\n",
         "\n",
-        "DROP TABLE IF EXISTS keeyong.name_gender;\n",
-        "CREATE TABLE keeyong.name_gender (\n",
+        "DROP TABLE IF EXISTS remotion371.name_gender;\n",
+        "CREATE TABLE remotion371.name_gender (\n",
         "   name varchar(32) primary key,\n",
         "   gender varchar(8)\n",
         ");"
@@ -131,11 +131,19 @@
           "name": "stdout",
           "text": [
             " * postgresql://remotion371:***@learnde.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev\n",
-            "(psycopg2.errors.InsufficientPrivilege) permission denied for schema keeyong\n",
-            "\n",
-            "[SQL: DROP TABLE IF EXISTS keeyong.name_gender;]\n",
-            "(Background on this error at: https://sqlalche.me/e/14/f405)\n"
+            "Done.\n",
+            "Done.\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
         }
       ]
     },
@@ -145,24 +153,23 @@
         "%%sql\n",
         "\n",
         "SELECT *\n",
-        "FROM keeyong.name_gender;"
+        "FROM remotion371.name_gender;"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 92
+          "height": 74
         },
         "id": "JrCpex1t0x4r",
-        "outputId": "f88fcd52-6d02-4aa5-f7b0-dc2e9a0e54a9"
+        "outputId": "84f72fe7-4054-44b4-fd14-40bde28c1682"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   postgresql://aza1200:***@learnde.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev\n",
-            " * postgresql://keeyong:***@learnde.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev\n",
+            " * postgresql://remotion371:***@learnde.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev\n",
             "0 rows affected.\n"
           ]
         },
@@ -182,7 +189,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 5
         }
       ]
     },
@@ -212,7 +219,7 @@
         "    conn.set_session(autocommit=True)\n",
         "    return conn.cursor()"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -236,7 +243,7 @@
         "    f = requests.get(url)\n",
         "    return (f.text)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -249,11 +256,11 @@
         "    lines = text.strip().split(\"\\n\")\n",
         "    records = []\n",
         "    for l in lines:\n",
-        "      (name, gender) = l.split(\",\") # l = \"Keeyong,M\" -> [ 'keeyong', 'M' ]\n",
+        "      (name, gender) = l.split(\",\")\n",
         "      records.append([name, gender])\n",
         "    return records"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -265,7 +272,7 @@
         "def load(records):\n",
         "    \"\"\"\n",
         "    records = [\n",
-        "      [ \"Keeyong\", \"M\" ],\n",
+        "      [ \"Minju\", \"F\" ],\n",
         "      [ \"Claire\", \"F\" ],\n",
         "      ...\n",
         "    ]\n",
@@ -277,10 +284,10 @@
         "        name = r[0]\n",
         "        gender = r[1]\n",
         "        print(name, \"-\", gender)\n",
-        "        sql = \"INSERT INTO keeyong.name_gender VALUES ('{n}', '{g}')\".format(n=name, g=gender)\n",
+        "        sql = \"INSERT INTO remotion371.name_gender VALUES ('{n}', '{g}')\".format(n=name, g=gender)\n",
         "        cur.execute(sql)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -302,7 +309,7 @@
         "\n",
         "data = extract(link)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -313,12 +320,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 174
         },
-        "outputId": "049a8873-515a-4b6b-a0cb-3ac26417fbeb"
+        "outputId": "6ffe634a-c7b4-4070-e610-90266e5c24e8"
       },
       "source": [
         "data"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -331,7 +338,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 11
         }
       ]
     },
@@ -343,7 +350,7 @@
       "source": [
         "lines = transform(data)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -356,9 +363,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XZRH4s3M2T5D",
-        "outputId": "e5abbbc1-2bd0-4c8e-d1d6-fdf211a6b761"
+        "outputId": "b16b5d3c-3320-4850-8156-8958c64d64c9"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -368,7 +375,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 13
         }
       ]
     },
@@ -379,12 +386,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3e658697-0f20-4e7d-d55d-e408891c882d"
+        "outputId": "a665dd9b-dc9d-453b-9171-1092c306fe62"
       },
       "source": [
         "lines[0:10]"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -403,7 +410,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 14
         }
       ]
     },
@@ -414,12 +421,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9a2c9e12-50f5-44ad-aed1-460a7171a558"
+        "outputId": "d328ca9c-4d0e-41a3-dc4b-119e247d0a89"
       },
       "source": [
         "load(lines)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -536,24 +543,23 @@
         "id": "b2tCeJtSWti4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 114
+          "height": 95
         },
-        "outputId": "3e12e626-efbb-474f-d820-b6c9e6b4fe38"
+        "outputId": "8eaf85b5-cd65-4124-b832-e75174f077bb"
       },
       "source": [
         "%%sql\n",
         "\n",
         "SELECT COUNT(1)\n",
-        "FROM keeyong.name_gender;"
+        "FROM remotion371.name_gender;"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   postgresql://aza1200:***@learnde.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev\n",
-            " * postgresql://keeyong:***@learnde.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev\n",
+            " * postgresql://remotion371:***@learnde.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev\n",
             "1 rows affected.\n"
           ]
         },
@@ -575,7 +581,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 16
         }
       ]
     },
@@ -585,7 +591,7 @@
         "%%sql\n",
         "\n",
         "SELECT *\n",
-        "FROM keeyong.name_gender;"
+        "FROM remotion371.name_gender;"
       ],
       "metadata": {
         "id": "S5w7Qzg9VPh1",
@@ -593,16 +599,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "bf758b34-0014-443a-cde5-5806c2be1a6b"
+        "outputId": "f74870a2-4963-4f86-971b-d31c93022b01"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   postgresql://aza1200:***@learnde.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev\n",
-            " * postgresql://keeyong:***@learnde.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev\n",
+            " * postgresql://remotion371:***@learnde.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev\n",
             "101 rows affected.\n"
           ]
         },
@@ -1126,7 +1131,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 17
         }
       ]
     },
@@ -1136,25 +1141,24 @@
         "%%sql\n",
         "\n",
         "SELECT gender, COUNT(1) count\n",
-        "FROM keeyong.name_gender\n",
+        "FROM remotion371.name_gender\n",
         "GROUP BY gender;"
       ],
       "metadata": {
         "id": "gJddJON02tGv",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 178
+          "height": 158
         },
-        "outputId": "1ae55935-ec9e-43b7-9453-288ba61606de"
+        "outputId": "09c31103-fbbf-4b2b-cbf6-2eebdd6e5401"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   postgresql://aza1200:***@learnde.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev\n",
-            " * postgresql://keeyong:***@learnde.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev\n",
+            " * postgresql://remotion371:***@learnde.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev\n",
             "4 rows affected.\n"
           ]
         },
@@ -1190,7 +1194,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 18
         }
       ]
     }
